# obsidian-llm

./: .cookiecutter.json  .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TODO  noxfile.py  pyproject.toml  sample.env
.github/: dependabot.yml
.github/workflows/: constraints.txt  labeler.yml  release.yml  release.yml.BAK  tests.yml
docs/: conf.py  index.md  reference.md  requirements.txt  usage.md
src/obsidian_llm/: __init__.py  __main__.py  alias_suggester.py  bump_journal_status.py  bump_note_status.py  diff_generator.py  fix_filenames.py  frontmatter_verifier.py  io.py  linkify.py  llm.py  markdown_enumerator.py  spell_check.py  syncthing_conflicts.py  yaml_handler.py
tests/: __init__.py  conftest.py  test_alias_suggester.py  test_alias_suggestion.py  test_bump_journal_status.py  test_bump_note_status.py  test_diff_generator.py  test_enumerator.py  test_io.py  test_linkify.py  test_llm.py  test_main.py  test_spell_check.py  test_syncthing_conflicts.py
tests/test_vault/: with_frontmatter.md  with_frontmatter_and_alias.md  with_frontmatter_and_alias_yaml.md  without_frontmatter.md
