[tool.poetry]
name = "obsidian-llm"
version = "0.0.1"
description = "Obsidian Llm"
authors = ["Richard Decal <public@richarddecal.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/crypdick/obsidian-llm"
repository = "https://github.com/crypdick/obsidian-llm"
documentation = "https://obsidian-llm.readthedocs.io"
classifiers = [
    "Development Status :: 1 - Planning",
]

[tool.poetry.urls]
Changelog = "https://github.com/crypdick/obsidian-llm/releases"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
click = ">=8.0.1"
ag2 = "^0.2.21"
pydotenv = "^0.0.7"
openai = "^1.14.3"
pyyaml = "^6.0.1"
beartype = "^0.17.2"
pyspellchecker = "^0.8.1"

[tool.poetry.dev-dependencies]
Pygments = ">=2.10.0"
black = ">=21.10b0"
coverage = {extras = ["toml"], version = ">=6.2"}
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
isort = ">=5.10.1"
mypy = ">=0.930"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=6.2.5"
pyupgrade = ">=2.29.1"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = {version = ">=0.16.1"}

[tool.poetry.scripts]
obsidian-llm = "obsidian_llm.__main__:main"

[tool.poetry.group.dev.dependencies]
types-pyyaml = "^6.0.12.20240311"
pytest-mock = "^3.14.0"
pytest = "^8.1.1"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["obsidian_llm", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 50
omit = ["*tests*", "*venv*"]

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = false
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true
exclude = ["site-packages", "tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
